--- a/My_ProjectSummary_May2020/My_ProjectSummary_May2020.Rmd
+++ b/My_ProjectSummary_May2020/My_ProjectSummary_May2020.Rmd
@@ -35,12 +35,32 @@ In this project, the emphasis is placed on the investigations to determine the o
 In the current stage of the project, the aim is to familiarise ourselves with the petroleum wells database in the NT. The scope of this project is limited to onshore gas wells in the NT which also includes the decommissioning of exploration and production wells.
 
 ## Preliminary results
+To get an overview of decommissioned and abandoned wells, we need to know:
+•	The number of wells abandoned and their distributions among all the basins in NT
 
-This section will demonstrate the different visuals you might want use to show off your 
-project. Don't feel the need to go overboard, this is supposed to give a taste of the work you are
-doing rather than being a publication ready document.
 
-```{r}
+
+```{r preliminary_code, echo=TRUE}
+library(tidyverse)
+library(readxl)
+library(ggplot2)
+library(cowplot)
+library(lubridate)
+library(dplyr)
+library(gganimate)
+NT_Wells<- read_excel("C:/Data_School/My_FOCUS_Project_EA/data/NT Petroleum Wells.xlsx")
+main_file <- NT_Wells %>% filter(Status=="Abandoned") %>% rename("RigReleaseDate"="Rig Release Date","TitleID"="Title ID",
+"WellName"= "Well Name","TotalDepthDate"="Total Depth Date","HydrocarbonShows"="Hydrocarbon Shows") %>% 
+  mutate(RigReleaseDate=year(RigReleaseDate))%>% drop_na(HydrocarbonShows)
+
+groupbybasin <- main_file  %>%   group_by(Basin)%>% summarise(num_rows=n())%>% arrange(num_rows) %>% rename("Number_of_Wells"="num_rows")
+ggplot(data=groupbybasin,mapping = aes(x=Basin,y=Number_of_Wells))+geom_bar(stat="identity", fill="darkblue")+
+  theme_minimal()+theme(axis.text.x = element_text(angle = 90))
+ggplot(data=main_file,mapping = aes(x=Basin,y=RigReleaseDate,color=HydrocarbonShows))+geom_point()+
+  theme_minimal()+theme(axis.text.x = element_text(angle = 90))+ scale_y_continuous(limits=c(1950,2020),breaks=c(1950,1960,1970,1980,1990,2000,2010,2020),
+ label=c("1950","1960","1970","1980","1990","2000","2010","2020"))+
+scale_colour_manual(values = c("darkblue", "#FF9999", "#FF9999","#FF9999", "darkblue", "#FF9999", "darkblue", "#FF9999"))+
+transition_states(HydrocarbonShows)
 
 ```
 
