--- a/My_ProjectSummary_May2020/My_ProjectSummary_May2020.Rmd
+++ b/My_ProjectSummary_May2020/My_ProjectSummary_May2020.Rmd
@@ -38,7 +38,8 @@ In the current stage of the project, the aim is to familiarise ourselves with th
 To get an overview of decommissioned and abandoned wells, we need to know:  
 •	The number of wells abandoned and their distributions among all the basins in NT  
 •	The time period at which the abandonment processes of **gas** wells has happened  
-```{r preliminary_code, echo=FALSE,fig.align='default',fig.show='hold',fig.width=3,fig.height=3}
+
+```{r preliminary_code, echo=FALSE,fig.align='centre'}
 library(tidyverse)
 library(readxl)
 library(ggplot2)
@@ -54,14 +55,27 @@ main_file <- NT_Wells %>% filter(Status=="Abandoned") %>% rename("RigReleaseDate
   mutate(RigReleaseDate=year(RigReleaseDate))%>% drop_na(HydrocarbonShows)
 groupbybasin <- main_file  %>%   group_by(Basin)%>% summarise(num_rows=n())%>% arrange(num_rows) %>% rename("Number_of_Wells"="num_rows")
 p1<-ggplot(data=groupbybasin,mapping = aes(x=Basin,y=Number_of_Wells))+geom_bar(stat="identity", fill="darkblue")+
-  theme_minimal()+theme(axis.text.x = element_text(angle = 90))
+  theme_minimal()+theme(axis.text.x = element_text(angle = 90))+transition_states(Basin)
+a_gif <- animate(p1)#, width = 140, height = 240)
 
 p2<-ggplot(data=main_file,mapping = aes(x=Basin,y=RigReleaseDate,color=HydrocarbonShows))+geom_point()+
   theme_minimal()+theme(axis.text.x = element_text(angle = 90))+ scale_y_continuous(limits=c(1950,2020),breaks=c(1950,1960,1970,1980,1990,2000,2010,2020),
  label=c("1950","1960","1970","1980","1990","2000","2010","2020"))+
 scale_colour_manual(values = c("darkblue", "#FF9999", "#FF9999","#FF9999", "darkblue", "#FF9999", "darkblue", "#FF9999"))+transition_states(HydrocarbonShows)
-p1
-p2
+
+b_gif <- animate(p2)#, width = 240, height = 240)
+
+a_mgif <- image_read(a_gif)
+b_mgif <- image_read(b_gif)
+new_gif <- image_append(c(a_mgif[1], b_mgif[1]))
+for(i in 2:100){
+  combined <- image_append(c(a_mgif[i], b_mgif[i]))
+  new_gif <- c(new_gif, combined)
+}
+
+new_gif
+
+
 ```
 
 
