--- a/My_ProjectSummary_May2020/My_ProjectSummary_May2020.Rmd
+++ b/My_ProjectSummary_May2020/My_ProjectSummary_May2020.Rmd
@@ -29,6 +29,8 @@ I am Elaheh Arjomand and I am doing a Post-doc fellowship on the subject of well
 In this project, the emphasis is placed on the investigations to determine the optimum approaches for monitoring wells after decommissioning in the Northern Territory. 
 <center>
 ![](C:/Data_School/My_FOCUS_Project_EA/My_Summary/My_ProjectSummary_May2020/image/well.jpg)
+
+![Image by Chris Burnett ]
 </center>
 
 
